# mask_hw

./: .flake8  .gitignore  README.md  file1.py  main.py  masks.py  pyproject.toml  widget.py
src/: divide.py  masks.py  processing.py  widget.py
tests/: conftest.py  test_main.py
